navbar collapse fix at 276px

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -64,11 +64,13 @@ body {
 
 #navigation,.navbar, .navbar-default {
   background: rgba(0, 0, 0, 0.2);
+  border-radius: 40px 15px;
 }
 
 .footer {
   color: #ffffff;
-  background-color: #666666;
+  background-color: rgba(102, 102, 102, 0.4);
+  border-radius: 40px 15px;
 }
 
 .pgHeader {
@@ -86,9 +88,12 @@ body {
 }
 
 #profilepic {
-  padding: 5px;
   margin: 0 auto;
+  border-style: groove;
+  border-width: 3px;
+  border-color: rgba(102, 102, 102, 0.4);
   border-radius: 50px;
+  box-shadow: 5px 5px 5px #666666;
 }
 
 #content {
@@ -96,9 +101,10 @@ body {
   background: #ffffff;
   border-style: groove;
   border-width: 3px;
-  border-color: #cccccc;
+  border-color: rgba(102, 102, 102, 0.4);
   margin-bottom:20px;
   border-radius: 10px;
+  box-shadow: 10px 10px 5px #666666;
 }
 
 #sidebar {
@@ -106,9 +112,10 @@ body {
   background: #ffffff;
   border-style: groove;
   border-width: 3px;
-  border-color: #cccccc; 
+  border-color: rgba(102, 102, 102, 0.4); 
   margin-bottom: 20px;
   text-align: center;
+  box-shadow: 10px 10px 5px #666666
 }
 
 #pgName {
